grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.1.242
